objects/APTS_Quotation_Information__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Related_Quotation_Number__c</fullName>
        <formula>IF(OR(Quote__r.APTS_Record_Type_Name__c =&apos;LP&apos;,Quote__r.RecordType.Name =&apos;Superseded&apos;),
HYPERLINK( &quot;/&quot; &amp; Quote__c, Quote__r.APTS_Quotation_Number__c),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Customer__c</fullName>
        <formula>Quote__r.Apttus_Proposal__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_End_User__c</fullName>
        <formula>Quote__r.APTS_Account_End_User__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account End User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_LP_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotation Information</relationshipLabel>
        <relationshipName>Quotation_Information_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <formula>TEXT(Quote__r.Apttus_QPApprov__Approval_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSPA_Number__c</fullName>
        <label>MSPA Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Partner_Customer__c</fullName>
        <formula>Quote__r.APTS_LP_Account_End_User__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Partner Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quotation_Name__c</fullName>
        <label>Quotation Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quotation_Owner__c</fullName>
        <formula>Quote__r.Owner:User.FirstName + &quot; &quot; +  Quote__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quotation Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quotation_Reference__c</fullName>
        <description>Dummy field for copying quotation Id to show up in global search</description>
        <label>Quotation Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Quotation Information</relationshipLabel>
        <relationshipName>Quotation_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <formula>Quote__r.APTS_LP_Sales_Person__r.FirstName + &quot; &quot; + Quote__r.APTS_LP_Sales_Person__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <formula>Quote__r.Apttus_Proposal__ExpectedStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <label>Quotation Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Quote__c</columns>
        <columns>Account_Customer__c</columns>
        <columns>Account_End_User__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Valid_From__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>QI-{0000000}</displayFormat>
        <label>Quotation Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotation Information</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>